--- a/style.css
+++ b/style.css
@@ -834,7 +834,7 @@ footer {
 
 .row.workflow.structure {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   margin: 0;
   margin-top: 50px;
 }
