--- a/style.css
+++ b/style.css
@@ -832,6 +832,10 @@ footer {
   }
 }
 
+.row.workflow.team {
+  justify-content: center;
+}
+
 .row.workflow.structure {
   display: flex;
   justify-content: center;
@@ -864,7 +868,7 @@ footer {
 }
 
 .card:hover {
-  transform: translateY(-5px);
+  /* transform: translateY(-5px); */
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
 }
 
@@ -889,4 +893,24 @@ footer {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+#mechanic_back {
+  display: none;
+  color: #ff413e;
+}
+
+#software_back {
+  display: none;
+  color: #75e24d;
+}
+
+#pr_back {
+  display: none;
+  color: #fff532;
+}
+
+#drive_back {
+  display: none;
+  color: #427bff;
 }
