--- a/style.css
+++ b/style.css
@@ -852,24 +852,59 @@ footer {
 }
 
 .card {
-  background-color: #111111;
-  border-radius: 20px;
-  text-align: center;
-  flex: 1 1 250px;
-  aspect-ratio: 391 / 630;
-  max-width: 450px;
-  padding: 2rem;
-  padding-top: 1rem;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  width: 250px;
+  height: auto;
+  perspective: 1000px;
+  display: inline-block;
+  margin: 10px;
+  vertical-align: center;
+  justify-content: center; /* dikey ortalama */
+  align-items: center;     /* yatay ortalama */
+  text-align: center;      /* yazıları ortalar */
 }
 
-.card:hover {
-  /* transform: translateY(-5px); */
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
+.card-inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* dikey ortalama */
+  align-items: center;     /* yatay ortalama */
+  text-align: center;      /* yazıları ortalar */
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s cubic-bezier(.25,.8,.25,1);
+  transform-style: preserve-3d;
+  background-color: #111111;
+  border-radius: 20px;
+  padding: 2rem 1rem;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+  aspect-ratio: 391 / 630;
+}
+
+.card.flipped .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  
+  display: flex;           /* Flex aktif */
+  flex-direction: column;  /* Dikey sıralama */
+  justify-content: center;  /* Dikey ortalama */
+  align-items: center;      /* Yatay ortalama */
+  
+  backface-visibility: hidden;
+  text-align: center;
+  padding: 1rem;           /* Kenarlardan boşluk */
+}
+
+.card-back {
+  transform: rotateY(180deg);
 }
 
 .card h3 {
@@ -883,6 +918,7 @@ footer {
   font-weight: 400;
   line-height: 1.5;
   color: #d0d0d0;
+  max-width: 230px;
 }
 
 .lion {
@@ -893,24 +929,4 @@ footer {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-#mechanic_back {
-  display: none;
-  color: #ff413e;
-}
-
-#software_back {
-  display: none;
-  color: #75e24d;
-}
-
-#pr_back {
-  display: none;
-  color: #fff532;
-}
-
-#drive_back {
-  display: none;
-  color: #427bff;
 }
