--- a/style.css
+++ b/style.css
@@ -424,350 +424,6 @@ footer {
   }
 }
 
-.meteor-1 {
-  position: absolute;
-  top: -200px;
-  left: 51%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 15s linear infinite;
-  animation-delay: 0s;
-}
-
-.meteor-1:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-2 {
-  position: absolute;
-  top: -180px;
-  left: 57%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 18s linear infinite;
-  animation-delay: 8s;
-}
-
-.meteor-2:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-3 {
-  position: absolute;
-  top: -220px;
-  left: 43%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 16s linear infinite;
-  animation-delay: 12s;
-}
-
-.meteor-3:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-4 {
-  position: absolute;
-  top: -190px;
-  left: 58%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 20s linear infinite;
-  animation-delay: 5s;
-}
-
-.meteor-4:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-5 {
-  position: absolute;
-  top: -150px;
-  left: 66%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 22s linear infinite;
-  animation-delay: 15s;
-}
-
-.meteor-5:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-6 {
-  position: absolute;
-  top: -170px;
-  left: 73%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 19s linear infinite;
-  animation-delay: 25s;
-}
-
-.meteor-6:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-7 {
-  position: absolute;
-  top: -210px;
-  left: 43%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 17s linear infinite;
-  animation-delay: 30s;
-}
-
-.meteor-7:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-8 {
-  position: absolute;
-  top: -240px;
-  left: 57%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 21s linear infinite;
-  animation-delay: 18s;
-}
-
-.meteor-8:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-9 {
-  position: absolute;
-  top: -230px;
-  left: 23%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 23s linear infinite;
-  animation-delay: 35s;
-}
-
-.meteor-9:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-10 {
-  position: absolute;
-  top: -250px;
-  left: 63%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 16s linear infinite;
-  animation-delay: 22s;
-}
-
-.meteor-10:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-11 {
-  position: absolute;
-  top: -160px;
-  left: 93%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 24s linear infinite;
-  animation-delay: 40s;
-}
-
-.meteor-11:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-12 {
-  position: absolute;
-  top: -140px;
-  left: 96%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 20s linear infinite;
-  animation-delay: 28s;
-}
-
-.meteor-12:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-13 {
-  position: absolute;
-  top: -130px;
-  left: 59%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 18s linear infinite;
-  animation-delay: 45s;
-}
-
-.meteor-13:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-14 {
-  position: absolute;
-  top: -180px;
-  left: 12%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 25s linear infinite;
-  animation-delay: 10s;
-}
-
-.meteor-14:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
-
-.meteor-15 {
-  position: absolute;
-  top: -200px;
-  left: 87%;
-  width: 300px;
-  height: 1px;
-  transform: rotate(-45deg);
-  background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-  animation: meteor 19s linear infinite;
-  animation-delay: 38s;
-}
-
-.meteor-15:before {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 5px;
-  border-radius: 50%;
-  margin-top: -2px;
-  background: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 0 15px 3px #fff;
-}
 
 @keyframes meteor {
   0% {
@@ -893,14 +549,14 @@ footer {
   top: 0;
   left: 0;
   
-  display: flex;           /* Flex aktif */
-  flex-direction: column;  /* Dikey sıralama */
-  justify-content: center;  /* Dikey ortalama */
-  align-items: center;      /* Yatay ortalama */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   
   backface-visibility: hidden;
   text-align: center;
-  padding: 1rem;           /* Kenarlardan boşluk */
+  padding: 1rem;
 }
 
 .card-back {
